# Computacion-En-GPU

./: .gitmodules  imflip.c
Lab1/Lab1/Lab1-Ex1-Device_properties/: to_compile.txt
Lab1/Lab1/Lab1-Ex2-Vectors_sum/: main.cu  reference.cpp  reference.hpp  student.cu  student.hpp  to_compile.txt
Lab1/Lab1/Lab1-Ex3-Sepia_filter/: main.cu  reference.cpp  reference.hpp  student.cu  student.hpp  to_compile.txt
Lab1/Lab1/Lab1-Ex3-Sepia_filter/utils/: image.cpp
Lab2/: main.cu  reference.cpp  reference.hpp  student.cu  student.hpp
Lab2/utils/: image.cpp  image.hpp
OpenGL/: command.txt  test.cpp
OpenGL/EjemploSergioSalinas/Cuda-OpenGL-inter/: Makefile  a.out  kernel.cu
OpenGL/EjemploSergioSalinas/Cuda-OpenGL-inter/EjemploSergioSalinas/Cuda-OpenGL-inter/: a.out  interopparticles  kernel.cu
OpenGL/EjemploSergioSalinas/Cuda-OpenGL-inter/EjemploSergioSalinas/Cuda-OpenGL-inter/include/: glad.c
OpenGL/EjemploSergioSalinas/Cuda-OpenGL-inter/EjemploSergioSalinas/TestCompilacion26-04-2022/Cuda-OpenGL-inter/: a.out  kernel.cu  kernelOriginal.cu
OpenGL/EjemploSergioSalinas/Cuda-OpenGL-inter/EjemploSergioSalinas/TestCompilacion26-04-2022/Cuda-OpenGL-inter/include/glad/: glad.h
Tareas/Tarea1/: CMakeLists.txt  readme.md
Tareas/Tarea1/include/matrix/: Matrix.h
Tareas/Tarea1/src/: CMakeLists.txt  Matrix.cpp
Tareas/Tarea1/test/: CMakeLists.txt  Matrix.cc
Tareas/Tarea3/T3/: CMakeLists.txt  fragmentShader.txt  fragmentShaderGEOM.txt  geometryShader.txt  imgui.ini  kernel.cl  main.cpp  terrain.txt  vertexShader.txt  vertexShaderGEOM.txt
Tareas/Tarea3/T3/include/: auxilliary.h  camera.h  camera2.h  camera3.h  headers.h  init.h  point_lights.h  setup.h  shader.h  terrain.h
Tareas/Tarea3/T3/src/: CMakeLists.txt  auxilliary.cpp  camera.cpp  camera2.cpp  camera3.cpp  initCl.cpp  initGL.cpp  point_lights.cpp  shader.cpp  terrain.cpp
clases/clase7/vectorAddOpencl-c++/: Makefile  main  main.cpp  vecAddd
clases/cuda-mat-mul/fifth-approach/: README.txt  mat_mul.cu  mat_mul_cuda  mat_mul_cuda.exp  profile16K.txt  profile4K.txt
clases/cuda-mat-mul/first-approach/: README.txt  mat_mul  mat_mul.cpp
clases/cuda-mat-mul/fourth-approach/: README.txt  mat_mul.cu  mat_mul_cuda  mat_mul_cuda.exp  mat_mul_cuda.lib  profile16K.txt  profile4K.txt
clases/cuda-mat-mul/second-approach/: README.txt  mat_mul.cu  mat_mul_cuda  mat_mul_cuda.exp  profile16K.txt  profile4K.txt
clases/cuda-mat-mul/third-approach/: README.txt  mat_mul.cu  mat_mul_cuda  mat_mul_cuda.exp  profile16K.txt  profile4K.txt
lecturas/lectura1/: apunte.txt
lecturas/lectura2/: apunte.txt
test/: b.cpp  c.cpp  first_opencl.c  vector_add_kernel.cl
test/arraySum/: file_loader.h  file_loader.hpp  host.cpp  kernel.cl
test/convolutionKernels/: convolution.cpp  convolutionKernels.hpp  convolutions.cl
test/convolutionKernels/utils/: utils.hpp
test/sepia_filter/: file_loader.h  file_loader.hpp  sepia_filter.cl  sepia_filter.cpp
test/sepia_filter/utils/: image.cpp  image.hpp
