file(GLOB SOURCES *.cpp *.h)

add_library(surfaceLeveldependencies ${SOURCES})
target_link_libraries(surfaceLeveldependencies PUBLIC glfw3 glad glm ${OpenCL_LIBRARY})
target_include_directories(surfaceLeveldependencies PUBLIC "${CMAKE_SOURCE_DIR}/include" ${OPENGL_INCLUDE_DIRS} ${GLFW3_INCLUDE_DIRS})

set(CL_VERSION ${OpenCL_VERSION_MAJOR}${OpenCL_VERSION_MINOR}0)
target_compile_definitions(${PROJECT_NAME} PRIVATE CL_HPP_TARGET_OPENCL_VERSION=${CL_VERSION} CL_HPP_MINIMUM_OPENCL_VERSION=${CL_VERSION})
# target_link_libraries(imgui PRIVATE glfw)

# set(CAMERA_H_LIST "${PROJECT_SOURCE_DIR}/include/camera.h" "${PROJECT_SOURCE_DIR}/include/terrain.h" "${PROJECT_SOURCE_DIR}/include/shader.h")
# set(TERRAIN_H_LIST "${PROJECT_SOURCE_DIR}/include/terrain.h")
# set(SHADER_H_LIST "${PROJECT_SOURCE_DIR}/include/shader.h")
# set(INIT_H_LIST "${PROJECT_SOURCE_DIR}/include/init.h")
# set(AUXILLIARY_H_LIST "${PROJECT_SOURCE_DIR}/include/auxilliary.h")

# set(CAMERA_CPP_LIST "camera.cpp")
# set(TERRAIN_CPP_LIST "terrain.cpp")
# set(SHADER_CPP_LIST "shader.cpp")
# set(INITG_CPP_LIST "initGL.cpp")
# set(INITC_CPP_LIST "initCL.cpp")
# set(AUXILLIARY_CPP_LIST "auxilliary.cpp")

# add_library(camera  ${CAMERA_CPP_LIST} ${CAMERA_H_LIST})
# add_library(terrain  ${TERRAIN_CPP_LIST} ${TERRAIN_H_LIST})
# add_library(shader  ${SHADER_CPP_LIST} ${SHADER_H_LIST})
# add_library(initcl  ${INITC_CPP_LIST} ${INIT_H_LIST})
# add_library(initgl  ${INITG_CPP_LIST} ${INIT_H_LIST})
# add_library(auxilliary  ${AUXILLIARY_CPP_LIST} ${AUXILLIARY_H_LIST})

# target_include_directories(camera PUBLIC ${PROJECT_SOURCE_DIR}/include)
# target_include_directories(terrain PUBLIC ${PROJECT_SOURCE_DIR}/include)
# target_include_directories(shader PUBLIC ${PROJECT_SOURCE_DIR}/include)
# target_include_directories(initcl PUBLIC ${PROJECT_SOURCE_DIR}/include)
# target_include_directories(initgl PUBLIC ${PROJECT_SOURCE_DIR}/include)
# target_include_directories(auxilliary PUBLIC ${PROJECT_SOURCE_DIR}/include)